--- a/Osobni telefonski imenik/Views/Brojevi/Index.cshtml
+++ b/Osobni telefonski imenik/Views/Brojevi/Index.cshtml
@@ -25,7 +25,7 @@
             <th>OsobaID</th>
             <th>Ime</th>
             <th>Prezime</th>
-            <th>Broj</th>
+            <th>Brojevi</th>
             <th>Opcije</th>
         </tr>
         </thead>
