--- a/Osobni telefonski imenik/Views/Osoba/Create.cshtml
+++ b/Osobni telefonski imenik/Views/Osoba/Create.cshtml
@@ -46,7 +46,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.TextAreaFor(model => model.Opis, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(model => model.Opis, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
                         </div>
                     </div>
